fix menu spacing

--- a/css/style.css
+++ b/css/style.css
@@ -44,10 +44,13 @@ nav {
     color: white;
     padding: .5rem .5rem 1rem .5rem;
 }
-nav li {
-    margin: 1rem 0 0 1rem;
+nav ul {
+    margin: 0;
     padding: 0;
+}
+nav li {
     display: inline;
+    margin: 0rem 1rem 0 1rem;
 }
 nav li a {
     color: black;
@@ -55,7 +58,7 @@ nav li a {
 }
 nav li a:hover {
     color: #F0F0F0;
-    border-bottom: .8rem;
+    border-bottom: .8rem solid #F0F0F0;
     transition: ease-out .25s;
 }
 
